syntax = "proto3";
option java_package = "io.masterkun.ai.proto";
option java_outer_classname = "ToolProto";
package io.masterkun.tool;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  // 字段是否必填
  optional bool field_required = 14192;
  // 字段说明
  optional string field_desc = 14193;
}

extend google.protobuf.MethodOptions {
  // mcp方法调用名称，如果为空则使用rpc方法名
  optional string method_name = 14192;
  // mcp方法说明
  optional string method_desc = 14193;
}

message TooCallMethodDescriptor {
  string fullMethodName = 1;
  bool clientStreaming = 2;
  bool serverStreaming = 3;
  google.protobuf.DescriptorProto inputType = 4;
  google.protobuf.DescriptorProto outputType = 5;
  bool idempotent = 6;
  bool safe = 7;
  bool sampledToLocalTracing = 8;
  google.protobuf.MethodOptions methodOptions = 9;
}

message BridgeToolGroupSet {
  google.protobuf.FileDescriptorSet allDependencies = 1;
  repeated BridgeToolGroup groups = 2;
}

message BridgeToolGroup {
  string name = 1;
  repeated BridgeTool tools = 2;
}

message BridgeTool {
  repeated string tags = 1;
  string filename = 2;
  string serviceName = 3;
  string methodName = 4;
}

message PublishService {
  string target = 1;
  BridgeToolGroupSet groups = 2;
  map<string, string> serviceOptions = 3;
}
