syntax = "proto3";
option java_package = "io.masterkun.ai.proto";
option java_outer_classname = "ToolProto";
package io.masterkun.toolcall;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FileOptions {
  // 标识文件下的服务可自动注册为工具
  optional bool file_auto_discovery = 14191;
}

extend google.protobuf.FieldOptions {
  // 字段是否必填
  optional bool field_required = 14192;
  // 字段说明
  optional string field_desc = 14193;
}

extend google.protobuf.ServiceOptions {
  // 标识服务下的方法可自动注册为工具
  optional bool service_auto_discovery = 14191;
  // 工具调用分组名称
  optional string group_name = 14192;
  // 工具标签列表
  repeated string service_tags = 14194;
}

extend google.protobuf.MethodOptions {
  // 标识方法可自动注册为工具
  optional bool method_auto_discovery = 14191;
  // 工具调用名称，如果为空则使用rpc方法名
  optional string method_name = 14192;
  // 工具说明
  optional string method_desc = 14193;
  // 工具标签列表
  repeated string method_tags = 14194;
}

message BridgeToolGroupSet {
  google.protobuf.FileDescriptorSet allDependencies = 1;
  repeated BridgeToolGroup groups = 2;
}

message BridgeToolGroup {
  string name = 1;
  repeated BridgeTool tools = 2;
}

message BridgeTool {
  repeated string tags = 1;
  string filename = 2;
  string serviceName = 3;
  string methodName = 4;
}

message PublishService {
  string target = 1;
  BridgeToolGroupSet groups = 2;
  map<string, string> serviceOptions = 3;
}
